// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

<div
  aria-controls="test"
  aria-expanded="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Disclosure"
  role="button"
  tabindex="0"
>
  Toggle
</div>
`;

exports[`composition hook should return with Disclosure props 1`] = `
Object {
  "aria-controls": "test",
  "aria-expanded": false,
  "className": "css-1fie8gx css-63it0p css-jwhr8m bb-Box bb-Disclosure",
  "onClick": [Function],
  "onClickCapture": [Function],
  "onKeyDown": [Function],
  "onKeyPressCapture": [Function],
  "onKeyUp": [Function],
  "onMouseDown": [Function],
  "onMouseDownCapture": [Function],
  "ref": [Function],
  "type": "button",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  aria-controls="test"
  aria-expanded="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Disclosure"
  role="button"
  tabindex="0"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-expanded="false"
  class="emotion-0 emotion-1 emotion-2 red bb-Box bb-Disclosure"
  type="button"
>
  Toggle
</button>
`;

exports[`overrides Disclosure.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: var(--bb-palette-red,#ff0000);
}

<button
  aria-controls="test"
  aria-expanded="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Disclosure"
  type="button"
>
  Toggle
</button>
`;

exports[`props should assign a ref 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-expanded="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Disclosure"
  type="button"
>
  Toggle
</button>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-expanded="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Disclosure"
  type="button"
>
  Toggle
</button>
`;

exports[`props should render correctly when disabled is set 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-disabled="true"
  aria-expanded="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Disclosure"
  disabled=""
  style="pointer-events: none;"
  type="button"
>
  Toggle
</button>
`;

exports[`props should render correctly when focusable is set 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<button
  aria-controls="test"
  aria-disabled="true"
  aria-expanded="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Disclosure"
  style="pointer-events: none;"
  type="button"
>
  Toggle
</button>
`;

exports[`theming Disclosure.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: var(--bb-palette-red,#ff0000);
}

<button
  aria-controls="test"
  aria-expanded="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Disclosure"
  type="button"
>
  Toggle
</button>
`;

exports[`useContext should render correctly 1`] = `
Object {
  "animated": false,
  "animating": false,
  "baseId": "bb-id-4",
  "hide": [Function],
  "setAnimated": [Function],
  "setBaseId": [Function],
  "setVisible": [Function],
  "show": [Function],
  "stopAnimation": [Function],
  "toggle": [Function],
  "unstable_idCountRef": Object {
    "current": 0,
  },
  "visible": false,
}
`;
